# cPythonTest

./: .gitignore  README.md  pyproject.toml  setup.py
tests/: test_imports.py
trading/: __init__.py  analysis_module1.pyx  data_fetcher.py  main.py  preprocessor.py  trade_executor.py
trading/cy/: __init__.py  aggregator.pyx  analysis_base.pxd  analysis_base.pyx  analysis_module2.pyx  analysis_module3.pyx  decision_maker.pyx
